--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -250,7 +250,7 @@
 			</div>
 			<div class="kr-sg-input-text pt-4">
 				<div class="label-text" >Name of Configuration</div>
-				<input type="text" placeholder="Placeholder text" [(ngModel)]="newConfigObj.name" class="input-text">
+				<input type="text" placeholder="Enter Name" [(ngModel)]="newConfigObj.name" class="input-text">
 			</div>
 		</div>
 		<ng-container *ngIf="newConfigObj.method === 'clone'">
