--- a/findly-builder/src/app/components/add-source/add-source.component.scss
+++ b/findly-builder/src/app/components/add-source/add-source.component.scss
@@ -1485,3 +1485,84 @@
         }
     }
 }
+
+.structuredData{
+    .download{
+        cursor: pointer;
+    }
+}
+
+.text-area-editor{
+    background: #ffffff;
+    border-radius: 4px;
+    border: 1px solid #BDC1C6;
+    .editor-actons{
+        border: 0;
+        display: flex;
+        padding: 5px;
+        .edit-action{
+            border-radius: 4px;
+            text-align: center;                                      
+            margin-right: 6px;                    
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 26px;
+            height: 26px;
+            cursor: pointer;                   
+            img{
+
+            }
+        }                
+    }
+    .kr-sg-input-text-area{
+        position: relative;
+        border-top: 1px solid #BDC1C6;
+        box-sizing: border-box;
+        // border-radius: 4px;
+        padding: 0 0px 0 20px;            
+        line-height: normal;
+      
+        .editor-actons{
+            position: absolute;
+            bottom: 10px;
+            border: 0;
+            left: 20px;
+            display: flex;
+            .edit-action{
+                background: #EFF0F1;
+                border-radius: 4px;
+                text-align: center;                                      
+                margin-right: 6px;                    
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: 26px;
+                height: 26px;
+                cursor: pointer;                   
+                img{
+
+                }
+            }                
+        }
+        .external-tab-content{
+            padding: 20px 20px 20px 0px;
+        }
+        textarea{
+            min-height: 320px;
+            resize: vertical;
+            border: 0;
+            padding: 18px 20px 0 0;
+            color: #292929;
+            font-size: 14px;
+            line-height: 24px;
+            background: transparent;
+            &::-webkit-resizer {                    
+                border-color: 0;
+                background-image: url("^assets/icons/editor/bg-resize.svg");
+                width: 15px;
+                height: 15px;                                        
+            }
+        }
+    }
+}   
