--- a/findly-builder/src/app/components/app-header/app-header.component.html
+++ b/findly-builder/src/app/components/app-header/app-header.component.html
@@ -6,7 +6,7 @@
                 <div class="myappname" *ngIf="appName"><div  container="body" ngbTooltip="{{appName}}" class="name">{{appName}}</div></div>
                 <div class="headerTabsContainer">
                     <div class="headerMenuTab" [ngClass] ="{'active' : mainMenu == '/summary'}" skipLocationChange routerLinkActive="active" (click)="analyticsClick('/summary')">Overview</div>
-                    <div class="headerMenuTab" [ngClass] ="{'active' : mainMenu == '/source'}" skipLocationChange  routerLinkActive="active" (click)="analyticsClick('/source')">
+                    <div class="headerMenuTab" id="sourceTab" [ngClass] ="{'active' : mainMenu == '/source'}" skipLocationChange  routerLinkActive="active" (click)="analyticsClick('/source')">
                        <span >Indices</span>
                        <span routerLink="/content" class="d-none"></span>
                        <span routerLink="/faqs" class="d-none"></span>
@@ -25,7 +25,7 @@
                         <div class="dropdown dropdown-open">
                             <button class="dropdown-toggle dropdown-input cust-repeat-type" data-toggle="dropdown" > Analytics</button>                                            
                             <ul class="dropdown-menu content-menu content-width">                                               
-                              <li (click)="analyticsClick('/dashboard')" [ngClass] ="{'active' : mainMenu == '/dashboard'}" ><a>Dashboard</a></li>
+                              <li (click)="analyticsClick('/dashboard')" id="dashboardTab" [ngClass] ="{'active' : mainMenu == '/dashboard'}" ><a>Dashboard</a></li>
                               <li (click)="analyticsClick('/userEngagement')" [ngClass] ="{'active' : mainMenu == '/userEngagement'}"><a>User Engagement</a></li>
                               <li (click)="analyticsClick('/searchInsights')" [ngClass] ="{'active' : mainMenu == '/searchInsights'}"><a>Search Insights</a></li>
                               <li (click)="analyticsClick('/resultInsights')" [ngClass] ="{'active' : mainMenu == '/resultInsights'}"><a>Results Insights</a></li>
@@ -34,7 +34,7 @@
                     </div>
                     <!-- <div class="headerMenuTab" [routerLink]="['/dashboard']" skipLocationChange routerLinkActive="active" (click)="analyticsClick('metrics')">Analytics</div> -->
                     <div class="headerMenuTab" id='experimentsTab' [ngClass] ="{'active' : mainMenu == '/experiments'}" (click)="analyticsClick('/experiments')">Experiments</div>
-                    <div class="headerMenuTab" [ngClass] ="{'active' : mainMenu == '/settings'}" (click)="analyticsClick('/settings')">Settings </div>
+                    <div class="headerMenuTab"  id='channelsTab' [ngClass] ="{'active' : mainMenu == '/settings'}" (click)="analyticsClick('/settings')">Settings </div>
                 </div>
             </div>
             <ul class="navbar-nav nav-flex-icons align-items-center right-menu-content flex-row justify-content-end"> 
