--- a/findly-builder/src/app/components/content-source/content-source.component.scss
+++ b/findly-builder/src/app/components/content-source/content-source.component.scss
@@ -1205,8 +1205,9 @@
                 .execute-log{
                     position: absolute;             
                     padding: 15px 20px;
-                    width: 332px;
-                    height: 290px;
+                    width: 265px;
+                   // width: 332px;
+                   // height: 290px;
                     background: #FFFFFF;
                     box-shadow: 0px 0px 11px rgba(0, 0, 0, 0.1);
                     top: -7px;
