--- a/findly-builder/src/app/components/result-ranking/result-ranking.component.scss
+++ b/findly-builder/src/app/components/result-ranking/result-ranking.component.scss
@@ -74,6 +74,18 @@
                     width: 55%;
                 }
             }
+            .info-div {
+                p{ 
+                margin: 10px 45px;
+                font-weight: 500;
+                font-size: 12px;
+                line-height: 15px;
+                color: #979797;
+                }
+                .mt-7{
+                    margin-top: -7px;
+                }
+            }
             .content-boxes{                                                
                 background: #fff;    
                 height: 100%;            
@@ -148,6 +160,21 @@
                                 }
                             }
                         }
+                        .reset-div{
+                            .search-icon{
+                                cursor: pointer;
+                            }
+                        }
+                        .reset-but{
+                            cursor: pointer;
+                            float: right;
+                            background: #0D6EFD;
+                            border-radius: 4px;
+                            width: 78px;
+                            height: 34px;
+                            border: none;
+                            color: white;
+                        }
                     }
                     .body-content{
                         .accor-scroll{
@@ -205,7 +232,13 @@
                                         }
                                     }
                                     .kr-sg-checkbox{
-                                        visibility: visible;
+                                        visibility: hidden;
+                                    }
+                                    &:hover{
+                                        background: #E7F1FF;
+                                        .kr-sg-checkbox{
+                                            visibility: visible;
+                                        }
                                     }
                                     .restore-icon{
                                         visibility: hidden;
