updated data structure styles

--- a/findly-builder/src/app/components/add-source/add-source.component.html
+++ b/findly-builder/src/app/components/add-source/add-source.component.html
@@ -742,6 +742,6 @@
   </ng-container>  
 </kr-modal> 
 
-<kr-modal modalType="center" modalClass="modal_popups_" #addStructuredDataModalPop>
+<kr-modal modalType="center" modalClass="modal_popups_ imort-structure-data" #addStructuredDataModalPop>
   <app-add-structured-data [selectedSourceType]="selectedSourceType" (closeStructuredDataModal)="cancleSourceAddition()"></app-add-structured-data>
 </kr-modal>
