--- a/findly-builder/src/app/components/faq-source/faq-source.component.scss
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.scss
@@ -29,7 +29,38 @@
             background: #F8F9FA;
             box-shadow: inset 0px -1px 0px rgba(0, 0, 0, 0.07);
             padding: 9px 20px;            
-            align-items: center;      
+            align-items: center;     
+            position: relative;
+            .export-success-notification{
+                position: absolute;
+                right: 2px;
+                display: flex;
+                background: #EAF6EC;
+                border: 1px solid #93D3A2;
+                box-sizing: border-box;
+                border-radius: 4px;
+                padding: 8px 12px;
+                align-items: center;
+                width: 539px;
+                top: 70px;
+                .check{
+                    img{
+
+                    }
+                }
+                .desc-info{
+                    color: #135423;
+                    font-weight: normal;
+                    font-size: 12px;
+                    line-height: 18px;
+                    margin: 0 13px;
+                }
+                .close-notification{
+                    position: absolute;
+                    right: 14px;
+                    cursor: pointer;
+                }
+            } 
             .left-sec{
                 &.faq-title{
                     color: #000000;
@@ -74,6 +105,14 @@
                 }
                 .clock{
                     cursor: pointer;
+                    margin-right: 30px;
+                }
+                .exportdropdown{
+                    .dropdown-open {
+                        .dropdown-input{
+                            background-color: transparent;
+                        }
+                    }
                 }
             }
         }
