--- a/findly-builder/src/app/components/synonyms/synonyms.component.html
+++ b/findly-builder/src/app/components/synonyms/synonyms.component.html
@@ -20,7 +20,7 @@
           </div>
           <div class="add_feild" (click)='enableAddNewSynonymBtn()'><img src="assets/icons/add_plus.svg">Add Synonym
           </div>
-          <div class="clock"> <img src="assets/icons/clock.svg"></div>
+          <div class="clock d-none"> <img src="assets/icons/clock.svg"></div>
 
           <!-- </div> -->
 
